HTML and CSS fix left column and center text aligned to the right

--- a/less/components/consonant/infobits/button.less
+++ b/less/components/consonant/infobits/button.less
@@ -11,8 +11,8 @@
     max-width: 100%;
     max-height: @consonant-btn-infobit-max-height;
     margin-left: 16px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 14px;
+    padding-right: 14px;
     border: 2px solid @consonant-color-brown-grey;
     border-radius: 16px;
     background-color: @consonant-color-white;
