--- a/less/components/consonant/infobits/link.less
+++ b/less/components/consonant/infobits/link.less
@@ -25,3 +25,7 @@
         color: @consonant-color-blue-4;
     }
 }
+
+* + *:not(:last-of-type):nth-child(2) .consonant-link-infobit:only-child {
+    margin-right: 0;
+}
